перевод торговли и ауков

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:18+0300\n"
-"PO-Revision-Date: 2022-12-02 17:19+0300\n"
+"POT-Creation-Date: 2022-12-03 19:22+0300\n"
+"PO-Revision-Date: 2022-12-03 19:26+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1128,105 +1128,102 @@ msgid "Нет такого навыка"
 msgstr "No such skill"
 
 #: state/models/treasury.py:38 storage/models/factory/production_log.py:18
-#: storage/models/storage.py:101
 msgid "storage_cash"
 msgstr ""
 
 #: state/models/treasury.py:42 storage/models/destroy.py:18
-#: storage/models/factory/production_log.py:22 storage/models/storage.py:105
-#: storage/models/transport.py:88
+#: storage/models/factory/production_log.py:22 storage/models/transport.py:88
 msgid "Уголь"
 msgstr ""
 
 #: state/models/treasury.py:45 storage/models/destroy.py:21
-#: storage/models/factory/production_log.py:25 storage/models/storage.py:110
+#: storage/models/factory/production_log.py:25
 msgid "iron"
 msgstr ""
 
 #: state/models/treasury.py:48 storage/models/destroy.py:24
-#: storage/models/factory/production_log.py:28 storage/models/storage.py:115
+#: storage/models/factory/production_log.py:28
 msgid "bauxite"
 msgstr ""
 
 #: state/models/treasury.py:52 storage/models/destroy.py:28
-#: storage/models/factory/production_log.py:32 storage/models/storage.py:121
+#: storage/models/factory/production_log.py:32
 msgid "wti_oil"
 msgstr ""
 
 #: state/models/treasury.py:55 storage/models/destroy.py:31
-#: storage/models/factory/production_log.py:35 storage/models/storage.py:126
+#: storage/models/factory/production_log.py:35
 msgid "brent_oil"
 msgstr ""
 
 #: state/models/treasury.py:58 storage/models/destroy.py:34
-#: storage/models/factory/production_log.py:38 storage/models/storage.py:131
+#: storage/models/factory/production_log.py:38
 msgid "urals_oil"
 msgstr ""
 
 #: state/models/treasury.py:62 storage/models/destroy.py:38
-#: storage/models/factory/production_log.py:42 storage/models/storage.py:137
+#: storage/models/factory/production_log.py:42
 msgid "gas"
 msgstr ""
 
 #: state/models/treasury.py:65 storage/models/destroy.py:41
-#: storage/models/factory/production_log.py:45 storage/models/storage.py:142
+#: storage/models/factory/production_log.py:45
 msgid "diesel"
 msgstr ""
 
 #: state/models/treasury.py:68 storage/models/destroy.py:44
-#: storage/models/factory/production_log.py:48 storage/models/storage.py:147
+#: storage/models/factory/production_log.py:48
 msgid "plastic"
 msgstr ""
 
 #: state/models/treasury.py:71 storage/models/destroy.py:46
 #: storage/models/factory/production_log.py:50
-#: storage/models/factory/project.py:85 storage/models/storage.py:151
+#: storage/models/factory/project.py:85
 msgid "steel"
 msgstr ""
 
 #: state/models/treasury.py:74 storage/models/destroy.py:48
-#: storage/models/factory/production_log.py:52 storage/models/storage.py:155
+#: storage/models/factory/production_log.py:52
 msgid "alumunuim"
 msgstr ""
 
 #: state/models/treasury.py:78 storage/models/destroy.py:52
-#: storage/models/factory/production_log.py:56 storage/models/storage.py:161
-#: storage/models/transport.py:144
+#: storage/models/factory/production_log.py:56 storage/models/transport.py:144
 msgid "Койки"
 msgstr ""
 
 #: state/models/treasury.py:82 storage/models/destroy.py:56
-#: storage/models/storage.py:167 storage/models/transport.py:150
-#: war/models/squads/infantry.py:32 war/models/wars/war_side.py:30
+#: storage/models/transport.py:150 war/models/squads/infantry.py:32
+#: war/models/wars/war_side.py:30
 msgid "Автоматы"
 msgstr ""
 
 #: state/models/treasury.py:85 storage/models/destroy.py:58
 #: storage/models/factory/production_log.py:63
-#: storage/models/factory/project.py:147 storage/models/storage.py:177
+#: storage/models/factory/project.py:147
 msgid "tank"
 msgstr ""
 
 #: state/models/treasury.py:88 storage/models/destroy.py:60
 #: storage/models/factory/production_log.py:66
-#: storage/models/factory/project.py:163 storage/models/storage.py:182
+#: storage/models/factory/project.py:163
 msgid "attack_air"
 msgstr ""
 
 #: state/models/treasury.py:91 storage/models/destroy.py:62
-#: storage/models/factory/production_log.py:69 storage/models/storage.py:187
+#: storage/models/factory/production_log.py:69
 msgid "orb_station"
 msgstr ""
 
 #: state/models/treasury.py:94 storage/models/destroy.py:64
 #: storage/models/factory/production_log.py:72
-#: storage/models/factory/project.py:179 storage/models/storage.py:192
+#: storage/models/factory/project.py:179
 msgid "mpads"
 msgstr ""
 
 #: state/models/treasury.py:97 storage/models/destroy.py:66
 #: storage/models/factory/production_log.py:75
-#: storage/models/factory/project.py:195 storage/models/storage.py:172
+#: storage/models/factory/project.py:195
 msgid "antitank"
 msgstr ""
 
@@ -1251,8 +1248,8 @@ msgstr ""
 msgid "Государственные налоги"
 msgstr ""
 
-#: storage/models/destroy.py:70 storage/models/storage.py:202
-#: storage/models/transport.py:185 war/models/wars/war_side.py:27
+#: storage/models/destroy.py:70 storage/models/transport.py:185
+#: war/models/wars/war_side.py:27
 msgid "Дроны"
 msgstr ""
 
@@ -1281,9 +1278,8 @@ msgstr ""
 msgid "medical"
 msgstr ""
 
-#: storage/models/factory/project.py:211 storage/models/storage.py:197
-#: storage/models/transport.py:180 war/models/squads/light_vehicle.py:47
-#: war/models/wars/war_side.py:32
+#: storage/models/factory/project.py:211 storage/models/transport.py:180
+#: war/models/squads/light_vehicle.py:47 war/models/wars/war_side.py:32
 msgid "БМП"
 msgstr ""
 
@@ -1316,158 +1312,230 @@ msgctxt "goods"
 msgid "Оружие"
 msgstr "Weapon"
 
-#: storage/models/storage.py:38
+#: storage/models/storage.py:38 storage/models/storage.py:101
 msgctxt "goods"
 msgid "Наличные"
 msgstr "Cash"
 
-#: storage/models/storage.py:43
+#: storage/models/storage.py:43 storage/models/storage.py:105
+#: storage/models/trade_offer.py:74
 msgctxt "goods"
 msgid "Уголь"
 msgstr "Coal"
 
-#: storage/models/storage.py:45
+#: storage/models/storage.py:45 storage/models/storage.py:110
+#: storage/models/trade_offer.py:75
 msgctxt "goods"
 msgid "Железо"
 msgstr "Iron"
 
-#: storage/models/storage.py:47
+#: storage/models/storage.py:47 storage/models/storage.py:115
+#: storage/models/trade_offer.py:76
 msgctxt "goods"
 msgid "Бокситы"
 msgstr "Bauxites"
 
-#: storage/models/storage.py:51
+#: storage/models/storage.py:51 storage/models/storage.py:121
+#: storage/models/trade_offer.py:78
 msgctxt "goods"
 msgid "Нефть WTI"
 msgstr "WTI Oil"
 
-#: storage/models/storage.py:53
+#: storage/models/storage.py:53 storage/models/storage.py:126
+#: storage/models/trade_offer.py:79
 msgctxt "goods"
 msgid "Нефть Brent"
 msgstr "Brent Oil"
 
-#: storage/models/storage.py:55
+#: storage/models/storage.py:55 storage/models/storage.py:131
+#: storage/models/trade_offer.py:80
 msgctxt "goods"
 msgid "Нефть Urals"
 msgstr "Urals Oil"
 
-#: storage/models/storage.py:59
+#: storage/models/storage.py:59 storage/models/storage.py:137
+#: storage/models/trade_offer.py:82
 msgctxt "goods"
 msgid "Бензин"
 msgstr "Gas"
 
-#: storage/models/storage.py:61
+#: storage/models/storage.py:61 storage/models/storage.py:142
+#: storage/models/trade_offer.py:83
 msgctxt "goods"
 msgid "Дизельное топливо"
 msgstr "Diesel"
 
-#: storage/models/storage.py:63
+#: storage/models/storage.py:63 storage/models/storage.py:147
+#: storage/models/trade_offer.py:84
 msgctxt "goods"
 msgid "Пластик"
 msgstr "Plastic"
 
-#: storage/models/storage.py:65
+#: storage/models/storage.py:65 storage/models/storage.py:151
+#: storage/models/trade_offer.py:85
 msgctxt "goods"
 msgid "Сталь"
 msgstr "Steel"
 
-#: storage/models/storage.py:67
+#: storage/models/storage.py:67 storage/models/storage.py:155
+#: storage/models/trade_offer.py:86
 msgctxt "goods"
 msgid "Алюминий"
 msgstr "Aluminium"
 
-#: storage/models/storage.py:71
+#: storage/models/storage.py:71 storage/models/storage.py:161
+#: storage/models/trade_offer.py:88
 msgctxt "goods"
 msgid "Койки"
 msgstr "Medicines"
 
-#: storage/models/storage.py:75
+#: storage/models/storage.py:75 storage/models/storage.py:167
+#: storage/models/trade_offer.py:90
 msgctxt "goods"
 msgid "Автоматы"
 msgstr "Rifles"
 
-#: storage/models/storage.py:77
+#: storage/models/storage.py:77 storage/models/storage.py:177
+#: storage/models/trade_offer.py:91
 msgctxt "goods"
 msgid "Танки"
 msgstr "Tanks"
 
-#: storage/models/storage.py:78
+#: storage/models/storage.py:78 storage/models/storage.py:172
+#: storage/models/trade_offer.py:92
 msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "AT-canon"
 
-#: storage/models/storage.py:79
+#: storage/models/storage.py:79 storage/models/storage.py:187
+#: storage/models/trade_offer.py:93
 msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Orbital cannons"
 
-#: storage/models/storage.py:81
+#: storage/models/storage.py:81 storage/models/storage.py:182
+#: storage/models/trade_offer.py:94
 msgctxt "goods"
 msgid "Штурмовики"
 msgstr "Attack planes"
 
-#: storage/models/storage.py:82
+#: storage/models/storage.py:82 storage/models/storage.py:192
+#: storage/models/trade_offer.py:95
 msgctxt "goods"
 msgid "ПЗРК"
 msgstr "MPADS"
 
-#: storage/models/storage.py:84
+#: storage/models/storage.py:84 storage/models/storage.py:197
+#: storage/models/trade_offer.py:96
 msgctxt "goods"
 msgid "БМП"
 msgstr "IFV"
 
-#: storage/models/storage.py:86
+#: storage/models/storage.py:86 storage/models/storage.py:202
+#: storage/models/trade_offer.py:97
 msgctxt "goods"
 msgid "БПЛА"
 msgstr "UAV"
 
 #: storage/models/storage.py:107
-msgid "coal_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Уголь - лимит"
+msgstr "Coal - limit"
 
 #: storage/models/storage.py:112
-msgid "iron_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Железо - лимит"
+msgstr "Iron - limit"
 
 #: storage/models/storage.py:117
-msgid "bauxite_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Бокситы - лимит"
+msgstr "Bauxites - limit"
 
 #: storage/models/storage.py:123
-msgid "wti_oil_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Нефть WTI - лимит"
+msgstr "WTI Oil - limit"
 
 #: storage/models/storage.py:128
-msgid "brent_oil_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Нефть Brent - лимит"
+msgstr "Brent Oil - limit"
 
 #: storage/models/storage.py:133
-msgid "urals_oil_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Нефть Urals - лимит"
+msgstr "Urals Oil - limit"
 
 #: storage/models/storage.py:139
-msgid "gas_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Бензин - лимит"
+msgstr "Gas - limit"
 
 #: storage/models/storage.py:144
-msgid "diesel_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Дизельное топливо - лимит"
+msgstr "Diesel - limit"
 
 #: storage/models/storage.py:149
-msgid "plastic_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Пластик - лимит"
+msgstr "Plastic - limit"
 
 #: storage/models/storage.py:153
-msgid "steel_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Сталь - лимит"
+msgstr "Steel - limit"
 
 #: storage/models/storage.py:157
-msgid "alumunuim_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Алюминий - лимит"
+msgstr "Aluminium - limit"
 
 #: storage/models/storage.py:163
-msgid "medical_cap"
-msgstr ""
+msgctxt "goods"
+msgid "Койки - лимит"
+msgstr "Medicines - limit"
+
+#: storage/models/storage.py:169
+msgctxt "goods"
+msgid "Автоматы - лимит"
+msgstr "Fifles - limit"
+
+#: storage/models/storage.py:174
+msgctxt "goods"
+msgid "ПТ-орудия - лимит"
+msgstr "AT-cannons - limit"
+
+#: storage/models/storage.py:179
+msgctxt "goods"
+msgid "Танки - лимит"
+msgstr "Tanks - limit"
+
+#: storage/models/storage.py:184
+msgctxt "goods"
+msgid "Штурмовики - лимит"
+msgstr "Attack planes - limit"
+
+#: storage/models/storage.py:189
+msgctxt "goods"
+msgid "Орбитальные орудия - лимит"
+msgstr "Orbital cannons - limit"
+
+#: storage/models/storage.py:194
+msgctxt "goods"
+msgid "ПЗРК - лимит"
+msgstr "MPADS - limit"
+
+#: storage/models/storage.py:199
+msgctxt "goods"
+msgid "БМП - лимит"
+msgstr "IFV - limit"
+
+#: storage/models/storage.py:204
+msgctxt "goods"
+msgid "БПЛА - лимит"
+msgstr "UAV - limit"
 
 #: storage/models/storage.py:250
 msgid "positive_spend_stock_req"
@@ -1609,6 +1677,127 @@ msgstr ""
 #: storage/models/transport.py:187
 msgid "Дроны - кубов"
 msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:15
+#: storage/templates/storage/auctions/auctions.html:38
+#: storage/templates/storage/trading/trading.html:48
+msgctxt "w_trading"
+msgid "Владелец"
+msgstr "Owner"
+
+#: storage/templates/storage/auctions/auction_info.html:26
+#: storage/templates/storage/auctions/auctions.html:36
+#: storage/templates/storage/trading/trading.html:47
+msgctxt "w_trading"
+msgid "Товар"
+msgstr "Good"
+
+#: storage/templates/storage/auctions/auction_info.html:29
+msgctxt "w_auctions"
+msgid "Завершение"
+msgstr "Ends at"
+
+#: storage/templates/storage/auctions/auction_info.html:34
+msgctxt "w_auctions"
+msgid "Лоты"
+msgstr "Lots"
+
+#: storage/templates/storage/auctions/auction_info.html:43
+#: storage/templates/storage/auctions/auctions.html:39
+#: storage/templates/storage/trading/new_offer.html:106
+#: storage/templates/storage/trading/trading.html:50
+msgctxt "w_trading"
+msgid "Количество"
+msgstr "Quantity"
+
+#: storage/templates/storage/auctions/auction_info.html:51
+#: storage/templates/storage/auctions/auction_info.html:101
+msgctxt "w_auctions"
+msgid "Ставка"
+msgstr "bid"
+
+#: storage/templates/storage/auctions/auction_info.html:57
+msgctxt "w_auctions"
+msgid "начальная"
+msgstr "starting bid"
+
+#: storage/templates/storage/auctions/auction_info.html:63
+msgctxt "w_auctions"
+msgid "Лидер"
+msgstr "Leader"
+
+#: storage/templates/storage/auctions/auction_info.html:77
+msgctxt "w_auctions"
+msgid "отсутствует"
+msgstr "absent"
+
+#: storage/templates/storage/auctions/auction_info.html:88
+msgctxt "w_auctions"
+msgid "Склад"
+msgstr "Warehouse"
+
+#: storage/templates/storage/auctions/auction_info.html:118
+msgctxt "w_auctions"
+msgid "Сделать ставку"
+msgstr "make bid"
+
+#: storage/templates/storage/auctions/auctions.html:29
+#: storage/templates/storage/trading/trading.html:40
+msgctxt "w_trading"
+msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
+msgstr "Select one or more criteria on the right and click \"Search\""
+
+#: storage/templates/storage/auctions/auctions.html:30
+#: storage/templates/storage/trading/trading.html:41
+msgctxt "w_trading"
+msgid "Ничего не найдено"
+msgstr "Nothing found"
+
+#: storage/templates/storage/auctions/auctions.html:37
+msgctxt "w_auctions"
+msgid "Дата создания"
+msgstr "Creation date"
+
+#: storage/templates/storage/auctions/auctions.html:40
+#: storage/templates/storage/trading/new_offer.html:118
+#: storage/templates/storage/trading/trading.html:51
+msgctxt "w_trading"
+msgid "Цена (шт.)"
+msgstr "Price (pcs.)"
+
+#: storage/templates/storage/auctions/auctions.html:41
+msgctxt "w_trading"
+msgid "Лотов"
+msgstr "№ of lots"
+
+#: storage/templates/storage/auctions/auctions.html:42
+msgctxt "w_trading"
+msgid "Ставка (мин)"
+msgstr "Bet (low)"
+
+#: storage/templates/storage/auctions/auctions.html:43
+msgctxt "w_trading"
+msgid "Ставка (макс)"
+msgstr "Bet (high)"
+
+#: storage/templates/storage/auctions/auctions.html:44
+#: storage/templates/storage/trading/new_offer.html:53
+#: storage/templates/storage/trading/trading.html:54
+msgctxt "w_trading"
+msgid "Действие"
+msgstr "Action"
+
+#: storage/templates/storage/auctions/auctions.html:77
+#: storage/templates/storage/trading/trading.html:99
+msgctxt "w_trading"
+msgid "Выберите товар"
+msgstr "Choose good"
+
+#: storage/templates/storage/auctions/auctions.html:86
+#: storage/templates/storage/trading/trading.html:109
+msgctxt "w_trading"
+msgid "Поиск"
+msgstr "Search"
 
 #: storage/templates/storage/redesign/assets.html:12
 #: storage/views/assets/assets.py:42
@@ -1865,12 +2054,6 @@ msgctxt "w_trading_new"
 msgid "+5 за каждый Склад"
 msgstr "+5 for each Warehouse"
 
-#: storage/templates/storage/trading/new_offer.html:53
-#: storage/templates/storage/trading/trading.html:54
-msgctxt "w_trading"
-msgid "Действие"
-msgstr "Action"
-
 #: storage/templates/storage/trading/new_offer.html:57
 msgctxt "w_trading_new"
 msgid "Продажа"
@@ -1906,18 +2089,6 @@ msgctxt "w_trading_new"
 msgid "Выберите товар"
 msgstr "Choose good"
 
-#: storage/templates/storage/trading/new_offer.html:106
-#: storage/templates/storage/trading/trading.html:50
-msgctxt "w_trading"
-msgid "Количество"
-msgstr "Quantity"
-
-#: storage/templates/storage/trading/new_offer.html:118
-#: storage/templates/storage/trading/trading.html:51
-msgctxt "w_trading"
-msgid "Цена (шт.)"
-msgstr "Price (pcs.)"
-
 #: storage/templates/storage/trading/new_offer.html:126
 msgctxt "w_trading_new"
 msgid "Будет заблокировано"
@@ -1927,26 +2098,6 @@ msgstr "Will be blocked on wallet"
 msgctxt "w_trading_new"
 msgid "Создать"
 msgstr "Create offer"
-
-#: storage/templates/storage/trading/trading.html:40
-msgctxt "w_trading"
-msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr "Select one or more criteria on the right and click \"Search\""
-
-#: storage/templates/storage/trading/trading.html:41
-msgctxt "w_trading"
-msgid "Ничего не найдено"
-msgstr "Nothing found"
-
-#: storage/templates/storage/trading/trading.html:47
-msgctxt "w_trading"
-msgid "Товар"
-msgstr "Good"
-
-#: storage/templates/storage/trading/trading.html:48
-msgctxt "w_trading"
-msgid "Владелец"
-msgstr "Owner"
 
 #: storage/templates/storage/trading/trading.html:49
 msgctxt "w_trading"
@@ -1992,16 +2143,6 @@ msgstr "Party"
 msgctxt "w_trading"
 msgid "Мои"
 msgstr "Mine"
-
-#: storage/templates/storage/trading/trading.html:99
-msgctxt "w_trading"
-msgid "Выберите товар"
-msgstr "Choose good"
-
-#: storage/templates/storage/trading/trading.html:109
-msgctxt "w_trading"
-msgid "Поиск"
-msgstr "Search"
 
 #: storage/templates/storage/trading/trading.html:113
 msgctxt "w_trading"
@@ -2498,6 +2639,21 @@ msgstr "Getting offers"
 msgctxt "w_trading"
 msgid "Некорректный владелец"
 msgstr "Incorrect owner"
+
+#: storage/views/trading/get_offers.py:153
+msgctxt "w_trading"
+msgid "Отменить"
+msgstr "Cancel"
+
+#: storage/views/trading/get_offers.py:157
+msgctxt "w_trading"
+msgid "Купить"
+msgstr "Buy"
+
+#: storage/views/trading/get_offers.py:159
+msgctxt "w_trading"
+msgid "Продать"
+msgstr "Sell"
 
 #: storage/views/trading/premium_trading.py:25
 #: storage/views/trading/premium_trading.py:37
