--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:18+0300\n"
+"POT-Creation-Date: 2022-12-03 19:22+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1131,105 +1131,102 @@ msgid "Нет такого навыка"
 msgstr "Tidak ada skill terkait"
 
 #: state/models/treasury.py:38 storage/models/factory/production_log.py:18
-#: storage/models/storage.py:101
 msgid "storage_cash"
 msgstr ""
 
 #: state/models/treasury.py:42 storage/models/destroy.py:18
-#: storage/models/factory/production_log.py:22 storage/models/storage.py:105
-#: storage/models/transport.py:88
+#: storage/models/factory/production_log.py:22 storage/models/transport.py:88
 msgid "Уголь"
 msgstr ""
 
 #: state/models/treasury.py:45 storage/models/destroy.py:21
-#: storage/models/factory/production_log.py:25 storage/models/storage.py:110
+#: storage/models/factory/production_log.py:25
 msgid "iron"
 msgstr ""
 
 #: state/models/treasury.py:48 storage/models/destroy.py:24
-#: storage/models/factory/production_log.py:28 storage/models/storage.py:115
+#: storage/models/factory/production_log.py:28
 msgid "bauxite"
 msgstr ""
 
 #: state/models/treasury.py:52 storage/models/destroy.py:28
-#: storage/models/factory/production_log.py:32 storage/models/storage.py:121
+#: storage/models/factory/production_log.py:32
 msgid "wti_oil"
 msgstr ""
 
 #: state/models/treasury.py:55 storage/models/destroy.py:31
-#: storage/models/factory/production_log.py:35 storage/models/storage.py:126
+#: storage/models/factory/production_log.py:35
 msgid "brent_oil"
 msgstr ""
 
 #: state/models/treasury.py:58 storage/models/destroy.py:34
-#: storage/models/factory/production_log.py:38 storage/models/storage.py:131
+#: storage/models/factory/production_log.py:38
 msgid "urals_oil"
 msgstr ""
 
 #: state/models/treasury.py:62 storage/models/destroy.py:38
-#: storage/models/factory/production_log.py:42 storage/models/storage.py:137
+#: storage/models/factory/production_log.py:42
 msgid "gas"
 msgstr ""
 
 #: state/models/treasury.py:65 storage/models/destroy.py:41
-#: storage/models/factory/production_log.py:45 storage/models/storage.py:142
+#: storage/models/factory/production_log.py:45
 msgid "diesel"
 msgstr ""
 
 #: state/models/treasury.py:68 storage/models/destroy.py:44
-#: storage/models/factory/production_log.py:48 storage/models/storage.py:147
+#: storage/models/factory/production_log.py:48
 msgid "plastic"
 msgstr ""
 
 #: state/models/treasury.py:71 storage/models/destroy.py:46
 #: storage/models/factory/production_log.py:50
-#: storage/models/factory/project.py:85 storage/models/storage.py:151
+#: storage/models/factory/project.py:85
 msgid "steel"
 msgstr ""
 
 #: state/models/treasury.py:74 storage/models/destroy.py:48
-#: storage/models/factory/production_log.py:52 storage/models/storage.py:155
+#: storage/models/factory/production_log.py:52
 msgid "alumunuim"
 msgstr ""
 
 #: state/models/treasury.py:78 storage/models/destroy.py:52
-#: storage/models/factory/production_log.py:56 storage/models/storage.py:161
-#: storage/models/transport.py:144
+#: storage/models/factory/production_log.py:56 storage/models/transport.py:144
 msgid "Койки"
 msgstr ""
 
 #: state/models/treasury.py:82 storage/models/destroy.py:56
-#: storage/models/storage.py:167 storage/models/transport.py:150
-#: war/models/squads/infantry.py:32 war/models/wars/war_side.py:30
+#: storage/models/transport.py:150 war/models/squads/infantry.py:32
+#: war/models/wars/war_side.py:30
 msgid "Автоматы"
 msgstr ""
 
 #: state/models/treasury.py:85 storage/models/destroy.py:58
 #: storage/models/factory/production_log.py:63
-#: storage/models/factory/project.py:147 storage/models/storage.py:177
+#: storage/models/factory/project.py:147
 msgid "tank"
 msgstr ""
 
 #: state/models/treasury.py:88 storage/models/destroy.py:60
 #: storage/models/factory/production_log.py:66
-#: storage/models/factory/project.py:163 storage/models/storage.py:182
+#: storage/models/factory/project.py:163
 msgid "attack_air"
 msgstr ""
 
 #: state/models/treasury.py:91 storage/models/destroy.py:62
-#: storage/models/factory/production_log.py:69 storage/models/storage.py:187
+#: storage/models/factory/production_log.py:69
 msgid "orb_station"
 msgstr ""
 
 #: state/models/treasury.py:94 storage/models/destroy.py:64
 #: storage/models/factory/production_log.py:72
-#: storage/models/factory/project.py:179 storage/models/storage.py:192
+#: storage/models/factory/project.py:179
 msgid "mpads"
 msgstr ""
 
 #: state/models/treasury.py:97 storage/models/destroy.py:66
 #: storage/models/factory/production_log.py:75
-#: storage/models/factory/project.py:195 storage/models/storage.py:172
+#: storage/models/factory/project.py:195
 msgid "antitank"
 msgstr ""
 
@@ -1254,8 +1251,8 @@ msgstr ""
 msgid "Государственные налоги"
 msgstr ""
 
-#: storage/models/destroy.py:70 storage/models/storage.py:202
-#: storage/models/transport.py:185 war/models/wars/war_side.py:27
+#: storage/models/destroy.py:70 storage/models/transport.py:185
+#: war/models/wars/war_side.py:27
 msgid "Дроны"
 msgstr ""
 
@@ -1284,9 +1281,8 @@ msgstr ""
 msgid "medical"
 msgstr ""
 
-#: storage/models/factory/project.py:211 storage/models/storage.py:197
-#: storage/models/transport.py:180 war/models/squads/light_vehicle.py:47
-#: war/models/wars/war_side.py:32
+#: storage/models/factory/project.py:211 storage/models/transport.py:180
+#: war/models/squads/light_vehicle.py:47 war/models/wars/war_side.py:32
 msgid "БМП"
 msgstr ""
 
@@ -1319,158 +1315,290 @@ msgctxt "goods"
 msgid "Оружие"
 msgstr "Senjata"
 
-#: storage/models/storage.py:38
+#: storage/models/storage.py:38 storage/models/storage.py:101
 msgctxt "goods"
 msgid "Наличные"
 msgstr "Uang"
 
-#: storage/models/storage.py:43
+#: storage/models/storage.py:43 storage/models/storage.py:105
+#: storage/models/trade_offer.py:74
 msgctxt "goods"
 msgid "Уголь"
 msgstr "Batu bara"
 
-#: storage/models/storage.py:45
+#: storage/models/storage.py:45 storage/models/storage.py:110
+#: storage/models/trade_offer.py:75
 msgctxt "goods"
 msgid "Железо"
 msgstr "Besi"
 
-#: storage/models/storage.py:47
+#: storage/models/storage.py:47 storage/models/storage.py:115
+#: storage/models/trade_offer.py:76
 msgctxt "goods"
 msgid "Бокситы"
 msgstr "Bauksit"
 
-#: storage/models/storage.py:51
+#: storage/models/storage.py:51 storage/models/storage.py:121
+#: storage/models/trade_offer.py:78
 msgctxt "goods"
 msgid "Нефть WTI"
 msgstr "Minyak WTI"
 
-#: storage/models/storage.py:53
+#: storage/models/storage.py:53 storage/models/storage.py:126
+#: storage/models/trade_offer.py:79
 msgctxt "goods"
 msgid "Нефть Brent"
 msgstr "Minyak Brent"
 
-#: storage/models/storage.py:55
+#: storage/models/storage.py:55 storage/models/storage.py:131
+#: storage/models/trade_offer.py:80
 msgctxt "goods"
 msgid "Нефть Urals"
 msgstr "Minyak Urals"
 
-#: storage/models/storage.py:59
+#: storage/models/storage.py:59 storage/models/storage.py:137
+#: storage/models/trade_offer.py:82
 msgctxt "goods"
 msgid "Бензин"
 msgstr "Gas"
 
-#: storage/models/storage.py:61
+#: storage/models/storage.py:61 storage/models/storage.py:142
+#: storage/models/trade_offer.py:83
 msgctxt "goods"
 msgid "Дизельное топливо"
 msgstr "Diesel"
 
-#: storage/models/storage.py:63
+#: storage/models/storage.py:63 storage/models/storage.py:147
+#: storage/models/trade_offer.py:84
 msgctxt "goods"
 msgid "Пластик"
 msgstr "Plastik"
 
-#: storage/models/storage.py:65
+#: storage/models/storage.py:65 storage/models/storage.py:151
+#: storage/models/trade_offer.py:85
 msgctxt "goods"
 msgid "Сталь"
 msgstr "Baja"
 
-#: storage/models/storage.py:67
+#: storage/models/storage.py:67 storage/models/storage.py:155
+#: storage/models/trade_offer.py:86
 msgctxt "goods"
 msgid "Алюминий"
 msgstr "Alumunium"
 
-#: storage/models/storage.py:71
+#: storage/models/storage.py:71 storage/models/storage.py:161
+#: storage/models/trade_offer.py:88
 msgctxt "goods"
 msgid "Койки"
 msgstr "Obat-obatan"
 
-#: storage/models/storage.py:75
+#: storage/models/storage.py:75 storage/models/storage.py:167
+#: storage/models/trade_offer.py:90
 msgctxt "goods"
 msgid "Автоматы"
 msgstr "Senjata"
 
-#: storage/models/storage.py:77
+#: storage/models/storage.py:77 storage/models/storage.py:177
+#: storage/models/trade_offer.py:91
 msgctxt "goods"
 msgid "Танки"
 msgstr "Tank"
 
-#: storage/models/storage.py:78
+#: storage/models/storage.py:78 storage/models/storage.py:172
+#: storage/models/trade_offer.py:92
 msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "AT-canon"
 
-#: storage/models/storage.py:79
+#: storage/models/storage.py:79 storage/models/storage.py:187
+#: storage/models/trade_offer.py:93
 msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Meriam orbit"
 
-#: storage/models/storage.py:81
+#: storage/models/storage.py:81 storage/models/storage.py:182
+#: storage/models/trade_offer.py:94
 msgctxt "goods"
 msgid "Штурмовики"
 msgstr "Pesawat tempur"
 
-#: storage/models/storage.py:82
+#: storage/models/storage.py:82 storage/models/storage.py:192
+#: storage/models/trade_offer.py:95
 msgctxt "goods"
 msgid "ПЗРК"
 msgstr "MPADS"
 
-#: storage/models/storage.py:84
+#: storage/models/storage.py:84 storage/models/storage.py:197
+#: storage/models/trade_offer.py:96
 msgctxt "goods"
 msgid "БМП"
 msgstr "IFV"
 
-#: storage/models/storage.py:86
+#: storage/models/storage.py:86 storage/models/storage.py:202
+#: storage/models/trade_offer.py:97
 msgctxt "goods"
 msgid "БПЛА"
 msgstr "UAV"
 
 #: storage/models/storage.py:107
-msgid "coal_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Уголь"
+msgctxt "goods"
+msgid "Уголь - лимит"
+msgstr "Batu bara"
 
 #: storage/models/storage.py:112
-msgid "iron_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Железо"
+msgctxt "goods"
+msgid "Железо - лимит"
+msgstr "Besi"
 
 #: storage/models/storage.py:117
-msgid "bauxite_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "Бокситы - лимит"
+msgstr "Bauksit"
 
 #: storage/models/storage.py:123
-msgid "wti_oil_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Нефть WTI"
+msgctxt "goods"
+msgid "Нефть WTI - лимит"
+msgstr "Minyak WTI"
 
 #: storage/models/storage.py:128
-msgid "brent_oil_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Нефть Brent"
+msgctxt "goods"
+msgid "Нефть Brent - лимит"
+msgstr "Minyak Brent"
 
 #: storage/models/storage.py:133
-msgid "urals_oil_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Нефть Urals"
+msgctxt "goods"
+msgid "Нефть Urals - лимит"
+msgstr "Minyak Urals"
 
 #: storage/models/storage.py:139
-msgid "gas_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Железо"
+msgctxt "goods"
+msgid "Бензин - лимит"
+msgstr "Besi"
 
 #: storage/models/storage.py:144
-msgid "diesel_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Дизельное топливо"
+msgctxt "goods"
+msgid "Дизельное топливо - лимит"
+msgstr "Diesel"
 
 #: storage/models/storage.py:149
-msgid "plastic_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "Пластик - лимит"
+msgstr "Bauksit"
 
 #: storage/models/storage.py:153
-msgid "steel_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Уголь"
+msgctxt "goods"
+msgid "Сталь - лимит"
+msgstr "Batu bara"
 
 #: storage/models/storage.py:157
-msgid "alumunuim_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Алюминий"
+msgctxt "goods"
+msgid "Алюминий - лимит"
+msgstr "Alumunium"
 
 #: storage/models/storage.py:163
-msgid "medical_cap"
-msgstr ""
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "Койки - лимит"
+msgstr "Bauksit"
+
+#: storage/models/storage.py:169
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "Автоматы - лимит"
+msgstr "Bauksit"
+
+#: storage/models/storage.py:174
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "ПТ-орудия - лимит"
+msgstr "Bauksit"
+
+#: storage/models/storage.py:179
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Бокситы"
+msgctxt "goods"
+msgid "Танки - лимит"
+msgstr "Bauksit"
+
+#: storage/models/storage.py:184
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Штурмовики"
+msgctxt "goods"
+msgid "Штурмовики - лимит"
+msgstr "Pesawat tempur"
+
+#: storage/models/storage.py:189
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Орбитальные орудия"
+msgctxt "goods"
+msgid "Орбитальные орудия - лимит"
+msgstr "Meriam orbit"
+
+#: storage/models/storage.py:194
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Уголь"
+msgctxt "goods"
+msgid "ПЗРК - лимит"
+msgstr "Batu bara"
+
+#: storage/models/storage.py:199
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Железо"
+msgctxt "goods"
+msgid "БМП - лимит"
+msgstr "Besi"
+
+#: storage/models/storage.py:204
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Железо"
+msgctxt "goods"
+msgid "БПЛА - лимит"
+msgstr "Besi"
 
 #: storage/models/storage.py:250
 msgid "positive_spend_stock_req"
@@ -1611,6 +1739,153 @@ msgstr ""
 
 #: storage/models/transport.py:187
 msgid "Дроны - кубов"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:15
+#: storage/templates/storage/auctions/auctions.html:38
+#: storage/templates/storage/trading/trading.html:48
+msgctxt "w_trading"
+msgid "Владелец"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:26
+#: storage/templates/storage/auctions/auctions.html:36
+#: storage/templates/storage/trading/trading.html:47
+msgctxt "w_trading"
+msgid "Товар"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:29
+#, fuzzy
+#| msgid "Завершение"
+msgctxt "w_auctions"
+msgid "Завершение"
+msgstr "Berakhir pada"
+
+#: storage/templates/storage/auctions/auction_info.html:34
+msgctxt "w_auctions"
+msgid "Лоты"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:43
+#: storage/templates/storage/auctions/auctions.html:39
+#: storage/templates/storage/trading/new_offer.html:106
+#: storage/templates/storage/trading/trading.html:50
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "Количество"
+msgctxt "w_trading"
+msgid "Количество"
+msgstr "Jumlah"
+
+#: storage/templates/storage/auctions/auction_info.html:51
+#: storage/templates/storage/auctions/auction_info.html:101
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "доставка"
+msgctxt "w_auctions"
+msgid "Ставка"
+msgstr "pengiriman"
+
+#: storage/templates/storage/auctions/auction_info.html:57
+msgctxt "w_auctions"
+msgid "начальная"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:63
+msgctxt "w_auctions"
+msgid "Лидер"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:77
+msgctxt "w_auctions"
+msgid "отсутствует"
+msgstr ""
+
+#: storage/templates/storage/auctions/auction_info.html:88
+#, fuzzy
+#| msgctxt "storage"
+#| msgid "Склад"
+msgctxt "w_auctions"
+msgid "Склад"
+msgstr "Penyimpanan"
+
+#: storage/templates/storage/auctions/auction_info.html:118
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "доставка"
+msgctxt "w_auctions"
+msgid "Сделать ставку"
+msgstr "pengiriman"
+
+#: storage/templates/storage/auctions/auctions.html:29
+#: storage/templates/storage/trading/trading.html:40
+msgctxt "w_trading"
+msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
+msgstr ""
+
+#: storage/templates/storage/auctions/auctions.html:30
+#: storage/templates/storage/trading/trading.html:41
+#, fuzzy
+#| msgctxt "repost"
+#| msgid "репост не найден"
+msgctxt "w_trading"
+msgid "Ничего не найдено"
+msgstr "postingan tidak ditemukan"
+
+#: storage/templates/storage/auctions/auctions.html:37
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "Стоимость создания"
+msgctxt "w_auctions"
+msgid "Дата создания"
+msgstr "Biaya produksi"
+
+#: storage/templates/storage/auctions/auctions.html:40
+#: storage/templates/storage/trading/new_offer.html:118
+#: storage/templates/storage/trading/trading.html:51
+msgctxt "w_trading"
+msgid "Цена (шт.)"
+msgstr ""
+
+#: storage/templates/storage/auctions/auctions.html:41
+msgctxt "w_trading"
+msgid "Лотов"
+msgstr ""
+
+#: storage/templates/storage/auctions/auctions.html:42
+msgctxt "w_trading"
+msgid "Ставка (мин)"
+msgstr ""
+
+#: storage/templates/storage/auctions/auctions.html:43
+msgctxt "w_trading"
+msgid "Ставка (макс)"
+msgstr ""
+
+#: storage/templates/storage/auctions/auctions.html:44
+#: storage/templates/storage/trading/new_offer.html:53
+#: storage/templates/storage/trading/trading.html:54
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "w_trading"
+msgid "Действие"
+msgstr "tindakan"
+
+#: storage/templates/storage/auctions/auctions.html:77
+#: storage/templates/storage/trading/trading.html:99
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выберите склад"
+msgctxt "w_trading"
+msgid "Выберите товар"
+msgstr "pilih penyimpanan"
+
+#: storage/templates/storage/auctions/auctions.html:86
+#: storage/templates/storage/trading/trading.html:109
+msgctxt "w_trading"
+msgid "Поиск"
 msgstr ""
 
 #: storage/templates/storage/redesign/assets.html:12
@@ -1875,15 +2150,6 @@ msgctxt "w_trading_new"
 msgid "+5 за каждый Склад"
 msgstr "Penyimpanan baru"
 
-#: storage/templates/storage/trading/new_offer.html:53
-#: storage/templates/storage/trading/trading.html:54
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "выбор действия"
-msgctxt "w_trading"
-msgid "Действие"
-msgstr "tindakan"
-
 #: storage/templates/storage/trading/new_offer.html:57
 #, fuzzy
 #| msgid "Продолжить"
@@ -1932,21 +2198,6 @@ msgctxt "w_trading_new"
 msgid "Выберите товар"
 msgstr "pilih penyimpanan"
 
-#: storage/templates/storage/trading/new_offer.html:106
-#: storage/templates/storage/trading/trading.html:50
-#, fuzzy
-#| msgctxt "storage_assets"
-#| msgid "Количество"
-msgctxt "w_trading"
-msgid "Количество"
-msgstr "Jumlah"
-
-#: storage/templates/storage/trading/new_offer.html:118
-#: storage/templates/storage/trading/trading.html:51
-msgctxt "w_trading"
-msgid "Цена (шт.)"
-msgstr ""
-
 #: storage/templates/storage/trading/new_offer.html:126
 msgctxt "w_trading_new"
 msgid "Будет заблокировано"
@@ -1959,29 +2210,6 @@ msgstr ""
 msgctxt "w_trading_new"
 msgid "Создать"
 msgstr "membuat"
-
-#: storage/templates/storage/trading/trading.html:40
-msgctxt "w_trading"
-msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr ""
-
-#: storage/templates/storage/trading/trading.html:41
-#, fuzzy
-#| msgctxt "repost"
-#| msgid "репост не найден"
-msgctxt "w_trading"
-msgid "Ничего не найдено"
-msgstr "postingan tidak ditemukan"
-
-#: storage/templates/storage/trading/trading.html:47
-msgctxt "w_trading"
-msgid "Товар"
-msgstr ""
-
-#: storage/templates/storage/trading/trading.html:48
-msgctxt "w_trading"
-msgid "Владелец"
-msgstr ""
 
 #: storage/templates/storage/trading/trading.html:49
 #, fuzzy
@@ -2041,19 +2269,6 @@ msgstr "Partai"
 msgctxt "w_trading"
 msgid "Мои"
 msgstr "Obat-obatan"
-
-#: storage/templates/storage/trading/trading.html:99
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "выберите склад"
-msgctxt "w_trading"
-msgid "Выберите товар"
-msgstr "pilih penyimpanan"
-
-#: storage/templates/storage/trading/trading.html:109
-msgctxt "w_trading"
-msgid "Поиск"
-msgstr ""
 
 #: storage/templates/storage/trading/trading.html:113
 #, fuzzy
@@ -2628,6 +2843,26 @@ msgstr "Pemindahan penyimpanan"
 msgctxt "w_trading"
 msgid "Некорректный владелец"
 msgstr "Nominal salah"
+
+#: storage/views/trading/get_offers.py:153
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "w_trading"
+msgid "Отменить"
+msgstr "Batal"
+
+#: storage/views/trading/get_offers.py:157
+msgctxt "w_trading"
+msgid "Купить"
+msgstr ""
+
+#: storage/views/trading/get_offers.py:159
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "передать"
+msgctxt "w_trading"
+msgid "Продать"
+msgstr "mengirim"
 
 #: storage/views/trading/premium_trading.py:25
 #: storage/views/trading/premium_trading.py:37
